# experiments

available_memory/: Cargo.toml  README.md
available_memory/benches/: available_memory.rs
available_memory/src/: lib.rs  main.rs
bash-chat/: chat.sh
cp/: Cargo.toml
cp/src/: cp.rs  haskell.rs  iso.rs  lib.rs
enum_type_erase/: Cargo.toml
enum_type_erase/src/: from_xml_element.rs  main.rs  types.rs  ultra_generic.rs
lock-bench/: Cargo.toml  README.md
lock-bench/benches/: incr.rs
lock-bench/benchmark-results/incr/1024/report/: index.html
lock-bench/benchmark-results/incr/128/report/: index.html
lock-bench/benchmark-results/incr/16/report/: index.html
lock-bench/benchmark-results/incr/16384/report/: index.html
lock-bench/benchmark-results/incr/2/report/: index.html
lock-bench/benchmark-results/incr/report/: index.html
lock-bench/benchmark-results/report/: index.html
lock-bench/src/: lib.rs
mccli/: Cargo.toml
mccli/proptest-regressions/packet/: types.txt
mccli/src/: lib.rs  main.rs
mccli/src/packet/: mod.rs  types.rs
mintype/: Cargo.toml  README.md
mintype/declarative/: Cargo.toml
mintype/declarative/src/: lib.rs
mintype/procedural/: Cargo.toml
mintype/procedural/src/: lib.rs
mintype/src/: main.rs
safe_vec/: safe_vec.cpp  safe_vec.rs  safe_vec_squeze.rs
stack-machine-vtable/: .gitignore  bytes.c  bytes.h  main.c  makefile  result.c  result.h  stack.c  stack.h  value.c  value.h
threadpool/: Cargo.toml
threadpool/src/: lib.rs  main.rs  promise.rs  stop_token.rs
threadpool/src/threapool/: mod.rs  stop_token.rs
(+173 files in other folders)
